--- a/News_homepage/index.html
+++ b/News_homepage/index.html
@@ -1,44 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="./stylesheets/main-styles.css" >
-  
-  <title>Frontend Mentor | News homepage</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./stylesheets/main-styles.css" />
 
-</head>
-<body>
-  <header>
-    <nav class="main-nav">
-      <img class="header-logo" src="./assets/images/logo.svg" alt="logo" >
-      <img class="burger-menu" src="./assets/images/icon-menu.svg" alt="burger menu">
-    </nav>
-  </header>
+    <title>Frontend Mentor | News homepage</title>
+  </head>
+  <body>
+    <header>
+      <nav class="main-nav">
+        <img class="header-logo" src="./assets/images/logo.svg" alt="logo" />
+        <img
+          class="burger-menu"
+          src="./assets/images/icon-menu.svg"
+          alt="burger menu"
+        />
+      </nav>
+    </header>
 
-<!-- 
+    <!-- 
   Home
   New
   Popular
   Trending
   Categories -->
 
-  <main>
+    <main>
+      <div class="main-article">
+        <img src="./assets/images/image-web-3-mobile.jpg" alt="" />
+        <h1>The Bright Future of Web 3.0?</h1>
+        <p class="main-paragraph">
+          We dive into the next evolution of the web that claims to put the
+          power of the platforms back into the hands of the people. But is it
+          really fulfilling its promise?
+        </p>
+        <button class="primary-btn">Read more</button>
+      </div>
+      <div class="recent-articles-container">
+        <h2>New</h2>
+        <div class="recent-article">
+          <h3>Hydrogen VS Electric Cars</h3>
+          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        </div>
+        <div class="recent-article">
+          <h3>The Downsides of AI Artistry</h3>
+          <p>
+            What are the possible adverse effects of on-demand AI image
+            generation?
+          </p>
+        </div>
+        <div class="recent-article">
+          <h3>Is VC Funding Drying Up?</h3>
+          <p>
+            Private funding by VC firms is down 50% YOY. We take a look at what
+            that means.
+          </p>
+        </div>
+      </div>
+    </main>
 
-    
-  </main>
+    <!
 
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
+  
 
   New 
 
@@ -61,11 +99,11 @@
 
   03
   The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
+  How the pandemic has sparked fresh opportunities. -->
+
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </div> -->
+  </body>
 </html>
